--- a/main.css
+++ b/main.css
@@ -77,12 +77,13 @@
 .omg{
     
     font-size: 1vw;
-    padding: 50px 50px 50px 15%;
+    padding: 50px;
     background-color: whitesmoke;
     box-shadow: 0px 0px 18px 0px #000000;
     border-radius: 20px 20px 20px 20px;
     height: 75vh;
     width: 80%;
+    
 }
 
 .form-box{
